the last commit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <figure class="form-section">
           <figcaption class="mortage-header">
             <h3>Mortgage Calculator</h3>
-            <button class="mortage-header-btn">clear all</button>
+            <button onclick="clearAll()" class="mortage-header-btn">clear all</button>
           </figcaption>
 
           <div class="form-group">
@@ -128,7 +128,7 @@
             </div>
           </figcaption>
 
-          <figcaption class="hidden">
+          <figcaption class="active-section hidden">
             <h2 class="result-title">Your results</h2>
             <p class="result-subtitle">
               Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur
